--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
+    "currently": "^0.0.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
